test/pass/00_hello_world.amla
func print(s: str, ...args: any) {
	// builtin
}

func main() int {
	print("hello, world!");
}
