test/fail/type_error/type_missmatch.amla
func q(x: i32) {
	
}

func x() {
     q("foo");
}